<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:padding="10dp"
        >
    <ImageView
        android:id="@+id/loginImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"

        >

        <EditText
            android:id="@+id/userNameEdt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_drawable"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/login"

            android:textStyle="bold"
            android:textAllCaps="false"

            />


    </LinearLayout>


</LinearLayout>