<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photoImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile3"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/userNameTvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_margin="5dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <ListView
            android:id="@+id/subjectsLvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/subjectEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_subject"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/addSubjectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_drawable"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/add_subject"
            android:textStyle="bold"
            android:textAllCaps="false"/>

    </LinearLayout>


</LinearLayout>